--- a/views/admin/project-proposal.ejs
+++ b/views/admin/project-proposal.ejs
@@ -206,12 +206,17 @@
                 <span class="value-text"><%= proposal.labourAnalysis.hoursPerWeek %> hrs @ $<%= (proposal.labourAnalysis.hourlyRate || 0).toLocaleString() %>/hr</span>
             </div>
             <% } %>
-            <% if (proposal.labourAnalysis.annualLabourCost) { %>
+            <% 
+            // Calculate annual labour cost: if value looks wrong (< hourlyRate), compute from hours
+            let calcLabourCost = proposal.labourAnalysis.annualLabourCost || 0;
+            if (calcLabourCost < (proposal.labourAnalysis.hourlyRate || 100) && proposal.labourAnalysis.hoursPerWeek && proposal.labourAnalysis.hourlyRate) {
+              calcLabourCost = proposal.labourAnalysis.hoursPerWeek * proposal.labourAnalysis.hourlyRate * 52;
+            }
+            %>
             <div class="value-row">
                 <span class="value-label">Annual Labour Cost</span>
-                <span class="value-text" style="font-weight:700;">$<%= (proposal.labourAnalysis.annualLabourCost || 0).toLocaleString() %></span>
+                <span class="value-text" style="font-weight:700;">$<%= calcLabourCost.toLocaleString() %></span>
             </div>
-            <% } %>
             <% if (proposal.labourAnalysis.additionalCosts) { %>
             <div class="value-row">
                 <span class="value-label">Additional Costs Replaced</span>
@@ -219,7 +224,7 @@
             </div>
             <% } %>
             <div class="value-row" style="border-top: 2px solid #93c5fd; padding-top: 12px;">
-                <span class="value-label" style="font-weight: 700;">Total Annual Savings</span>
+                <span class="value-label" style="font-weight: 700;">Estimated Total Annual Savings</span>
                 <span class="value-text" style="font-size: 1.2rem; font-weight: 800; color: #1e40af;">$<%= (proposal.labourAnalysis.totalAnnualSavings || 0).toLocaleString() %></span>
             </div>
         </div>
